chore: Add -XX:+UseCompactObjectHeaders by default to reduce mem usage on JDK 25+ (#14605)
It will likely be on by default by JDK 29, but for now we can opt-in. Build is always run on JDK 25+ so can add it there by default.